--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,9 @@
 server.port=8762
 spring.application.name=zuul-server
 eureka.client.service-url.default-zone=http://localhost:8761/eureka/
+spring.datasource.url=jdbc:postgresql://localhost:5432/store_auth
+spring.datasource.username=postgres
+spring.datasource.password=
 
 zuul.routes.catalog-service.path=/catalog/**
 zuul.routes.catalog-service.service-id=store-catalog-service
