integration with frontend

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,7 +13,7 @@ zuul.routes.information-service.path=/products/**
 zuul.routes.information-service.service-id=store-information-service
 zuul.routes.information-service.strip-prefix=false
 
-zuul.routes.rating-service.path=/api/ratings/**
+zuul.routes.rating-service.path=/ratings/**
 zuul.routes.rating-service.service-id=store-rating-service
 zuul.routes.rating-service.strip-prefix=false
 
@@ -25,7 +25,7 @@ zuul.routes.profile-service.path=/profile/**
 zuul.routes.profile-service.service-id=store-profile-service
 zuul.routes.profile-service.strip-prefix=false
 
-zuul.routes.comment-service.path=/api/comments/**
+zuul.routes.comment-service.path=/comments/**
 zuul.routes.comment-service.service-id=store-comment-service
 zuul.routes.comment-service.strip-prefix=false
 
