--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -25,6 +25,10 @@ zuul.routes.profile-service.path=/profile/**
 zuul.routes.profile-service.service-id=store-profile-service
 zuul.routes.profile-service.strip-prefix=false
 
+zuul.routes.mail-service.path=/news/**
+zuul.routes.mail-service.service-id=store-news
+zuul.routes.mail-service.strip-prefix=false
+
 zuul.routes.comment-service.path=/comments/**
 zuul.routes.comment-service.service-id=store-comment-service
 zuul.routes.comment-service.strip-prefix=false
