--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,6 +21,10 @@ zuul.routes.cart-service.path=/cart/**
 zuul.routes.cart-service.service-id=store-cart-service
 zuul.routes.cart-service.strip-prefix=false
 
+zuul.routes.order-service.path=/orders/**
+zuul.routes.order-service.service-id=store-order-service
+zuul.routes.order-service.strip-prefix=false
+
 zuul.routes.profile-service.path=/profile/**
 zuul.routes.profile-service.service-id=store-profile-service
 zuul.routes.profile-service.strip-prefix=false
